<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.anhdt.mediapicker.MainActivity">

    <Button
        android:id="@+id/btn_choose"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/choose"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="#00bcd4"/>
    <View
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_height="match_parent"
            android:text="@string/max_files_select"/>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"/>
        <EditText
            android:id="@+id/edt_max_files"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/holo_blue_dark"
            android:layout_height="match_parent"
            android:text="@string/default_max_files" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_marginBottom="10dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:text="@string/link_images_selected"/>
                <TextView
                    android:id="@+id/tv_link_images"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="test link images ^_^"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#000"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:padding="5dp"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:text="@string/link_videos_selected"/>
                <TextView
                    android:id="@+id/tv_link_videos"
                    android:layout_marginTop="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="test link videos ^_^"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
